# flutter_vulkan

./: .gitignore  pubspec.yaml
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  vulkan_jni.cpp
android/src/main/kotlin/com/vkb/flutter_vulkan/: FlutterVulkanPlugin.kt  VulkanPlatformView.kt  VulkanViewFactory.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/vulkan_example/: MainActivity.kt
example/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
example/assets/shaders/: mesh3d.frag.spv  mesh3d.vert.spv
example/lib/: benchmark_game.dart  main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
lib/: flutter_vulkan.dart
lib/src/: flutter_vulkan_game.dart  vulkan_flutter_loader.dart  vulkan_view.dart
scripts/: setup_example.ps1  setup_example.sh
windows/: CMakeLists.txt  flutter_vulkan_plugin.cpp
windows/flutter_vulkan/: flutter_vulkan_plugin.h
